C2D-78 | Fixed text align in basic page body text.

--- a/themes/custom/c2d_theme/css/5.components/components.node.page.css
+++ b/themes/custom/c2d_theme/css/5.components/components.node.page.css
@@ -38,8 +38,11 @@
   padding-bottom:5.5rem;
   color:#12284c;
   text-decoration:none;
-  text-align:center;
   margin-top:2rem;
+}
+.page-node-type-page .field--name-field-lead,
+.page-node-type-page .field--name-body p:not([class]){
+  text-align:center;
 }
 .page-node-type-page .block-page-title-block + .node--type-page .field--name-body,
 .page-node-type-page .block-page-title-block + .node--type-page .field--name-field-lead{
